--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <p>
 Congratulations to <a href="https://sites.google.com/site/samiashafique067/">Samia</a> on the <a href="https://wacv2023.thecvf.com/home"  target="_blank">WACV'23 
 <img src="./aimerykong_files/WACV2023_logo.jpg", height="25"></a> 
-	paper "<a href="https://aimerykong.github.io/"  target="_blank">Creating a Forensic Database of Shoeprints from Online Shoe Tread Photos</a>"! (10/10/2022)
+	paper "<a href="https://github.com/Samia067/ShoeRinsics"  target="_blank">Creating a Forensic Database of Shoeprints from Online Shoe Tread Photos</a>"! (10/10/2022)
 </a>
 </li>
 
@@ -132,7 +132,7 @@ Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a h
 <p>
 Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://corl2022.org"  target="_blank">CoRL'22 <img src="./aimerykong_files/CoRL2022_logo.jpg", height="25"></a> 
 
-	paper "<a href="https://aimerykong.github.io/"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
+	paper "<a href="https://github.com/neeharperi/LT3D"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
 </a>
 </li>	
 
