--- a/publication.html
+++ b/publication.html
@@ -123,12 +123,12 @@ In NeurIPS 2022
 
 <tr>
 <td width="35%" height=150>
-<a href="https://aimerykong.github.io/">
+<a href="https://github.com/neeharperi/LT3D">
 <img src="aimerykong_files/splashy_corl2022.jpg" height="110" border="0">
 </a><br>
 </td>
 <td>
-<a href="https://aimerykong.github.io/">
+<a href="https://github.com/neeharperi/LT3D">
 <b>Towards Long Tailed 3D Detection</b></a>
 <br>
 <a href="http://www.neeharperi.com/">N. Peri</a>, 
@@ -136,9 +136,7 @@ In NeurIPS 2022
         <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup> <br>
 In CoRL 2022
 <br>
-[<a href="https://aimerykong.github.io/">webpage</a>]
-[<a href="https://aimerykong.github.io/">paper</a>]
-[<a href="https://aimerykong.github.io/">github</a>]
+[<a href="https://github.com/neeharperi/LT3D">webpage</a>]
 <br>
 </td>
 
