--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 <li>
 <p>
 Congratulations to <a href="https://sites.google.com/site/samiashafique067/">Samia</a> on the <a href="https://wacv2023.thecvf.com/home"  target="_blank">WACV'23 
-<img src="./aimerykong_files/WACV2023_logo.jpg", height="25"></a> 
-	paper "<a href="https://github.com/Samia067/ShoeRinsics"  target="_blank">Creating a Forensic Database of Shoeprints from Online Shoe Tread Photos</a>"! (10/10/2022)
+<img src="./aimerykong_files/WACV2023_logo.jpg", height="20"></a> 
+	paper "<a href="https://aimerykong.github.io/"  target="_blank">Creating a Forensic Database of Shoeprints from Online Shoe Tread Photos</a>"! (10/10/2022)
 </a>
 </li>
 
@@ -113,7 +113,7 @@ Congratulations to <a href="https://sites.google.com/site/samiashafique067/">Sam
 <li>
 <p>
 Congratulations to <a href="https://www.linkedin.com/in/shubham-gupta94/">Shubham</a> and <a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">Jeet</a> on the <a href="https://wacv2023.thecvf.com/home"  target="_blank">WACV'23 
-<img src="./aimerykong_files/WACV2023_logo.jpg", height="25"></a> 
+<img src="./aimerykong_files/WACV2023_logo.jpg", height="20"></a> 
 	paper "<a href="https://aimerykong.github.io/"  target="_blank">Far3Det: Towards Far-Field 3D Detection</a>"! (10/10/2022)
 </a>
 </li>
@@ -122,17 +122,17 @@ Congratulations to <a href="https://www.linkedin.com/in/shubham-gupta94/">Shubha
 <li>
 <p>
 Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a href="https://nips.cc/Conferences/2022"  target="_blank">NeurIPS'22 
-<img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="35"></a> 
-	paper "<a href="https://linzhiqiu.github.io/papers/leco/"  target="_blank">Learning With an Evolving Class Ontology</a>"! (9/14/2022)
+<img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="40"></a> 
+	paper "<a href="https://aimerykong.github.io/"  target="_blank">Learning With an Evolving Class Ontology</a>"! (9/14/2022)
 </a>
 </li>
 	
 	
 <li>
 <p>
-Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://corl2022.org"  target="_blank">CoRL'22 <img src="./aimerykong_files/CoRL2022_logo.jpg", height="25"></a> 
+Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://corl2022.org"  target="_blank">CoRL'22 <img src="./aimerykong_files/CoRL2022_logo.jpg", height="30"></a> 
 
-	paper "<a href="https://github.com/neeharperi/LT3D"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
+	paper "<a href="https://aimerykong.github.io/"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
 </a>
 </li>	
 
@@ -141,8 +141,8 @@ Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a hre
 <p>
 Our 2nd workshop of <a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/" target="_blank">Dealing with the Novelty in Open Worlds</a> 
 will be held on Jan 3rd, 2023, at 
-<a href="https://wacv2023.thecvf.com/home" target="_blank">WACV'23 <img src="./aimerykong_files/WACV2023_logo.jpg", height="25"></a> in Waikoloa, Hawaii!
-(8/15/2022)
+<a href="https://wacv2023.thecvf.com/home" target="_blank">WACV'23 <img src="./aimerykong_files/WACV2023_logo.jpg", height="20"></a> in Waikoloa, Hawaii!
+(8/15/2021)
 </p>
 </li>		
 		
