--- a/publication.html
+++ b/publication.html
@@ -45,7 +45,7 @@
 
 <tr>
 <td width="35%" height=150>
-<a href="https://arxiv.org/abs/2205.02361">
+<a href="https://github.com/Samia067/ShoeRinsics">
 <img src="aimerykong_files/WACV23-ShoeRinsics.jpg" height="120"  border="0">
 </a><br>
 </td>
@@ -112,8 +112,7 @@ In WACV 2022
 In NeurIPS 2022
 <br>
 [<a href="https://linzhiqiu.github.io/papers/leco/">webpage</a>]
-[<a href="https://linzhiqiu.github.io/papers/leco/">paper</a>]
-[<a href="https://linzhiqiu.github.io/papers/leco/">github</a>]
+[<a href="https://arxiv.org/abs/2210.04993">paper</a>]
 <br>
 </td>
 
