--- a/publication.html
+++ b/publication.html
@@ -135,7 +135,7 @@ In NeurIPS 2022
         <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup> <br>
 In CoRL 2022
 <br>
-[<a href="https://github.com/neeharperi/LT3D">webpage</a>]
+[<a href="https://github.com/neeharperi/LT3D">webpage</a>] [<a href="https://drive.google.com/file/d/1fWJTEn8iYCuKQaMFvOizNp088coV_1OJ/view?usp=sharing">preprint</a>]
 <br>
 </td>
 
