--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a h
 <p>
 Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://corl2022.org"  target="_blank">CoRL'22 <img src="./aimerykong_files/CoRL2022_logo.jpg", height="30"></a> 
 
-	paper "<a href="https://github.com/neeharperi/LT3D"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
+	paper "<a href="https://drive.google.com/file/d/1fWJTEn8iYCuKQaMFvOizNp088coV_1OJ/view?usp=sharing"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
 </a>
 </li>	
 
