--- a/group.html
+++ b/group.html
@@ -39,6 +39,10 @@
 		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena)</li>
 		<li><a href="https://scholar.google.com/citations?user=fHWXpq4AAAAJ&hl=en">Jacob Fang</a> (PhD at ASU, now at Amazon Alexa AI)</li>
 		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master at UIUC, co-advised by Surangi Punyasena)</li>
+		<li><a href="https://aimerykong.github.io/group.html">Satish Reddy</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
+		<li><a href="https://aimerykong.github.io/group.html">Shubham Gupta</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
+		<li><a href="https://aimerykong.github.io/group.html">Shubham Parashar</a> (Master at TAMU)</li>
+		<li><a href="https://scholar.google.com/citations?user=asHobe0AAAAJ&hl=en">Jia Shi</a> (MSCV at CMU)</li>
 		<li><a href="https://g-meghana-reddy.github.io/">Meghana Reddy Ganesina</a> (MSCV at CMU)</li>
 		<li><a href="https://anirudh-chakravarthy.github.io/">Anirudh S Chakravarthy</a> (MSCV at CMU)</li>
 		<li><a href="https://jamie725.github.io/website/index.html">Yi-Ting Chen</a> (MSCV at CMU, now PhD at UMD)</li>
@@ -93,6 +97,8 @@
 		<li><a href="https://andrewowens.com/">Andrew Owens</a>, Assistant Professor, UMich-EECS
 		</li>
 		<li><a href="http://www.cs.columbia.edu/~vondrick/">Carl Vondrick</a>, Assistant Professor, Columbia-CS
+		</li>
+		<li><a href="https://dvl.in.tum.de/team/lealtaixe/">Laura Leal-Taixé</a>, Professor, Technical University of Munich
 		</li>
 	</ul>	
 	
