--- a/group.html
+++ b/group.html
@@ -32,6 +32,7 @@
 <h4>Graduate Students (advisees and mentees)</h4>
 	<ul>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
+		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
