--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 </div>
 		
 <h3 style="font-size:20px;font-family:Times">Links</h3>
-<ul style="font-size:13px;font-family:Times;line-height:15px">
+<ul style="font-size:13px;font-family:Times;line-height:15px">	
+	<li>
+	<p><a href="https://vplow.github.io/vplow_3rd.html">The 3nd Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'23</a> </p>
+	</li>
 	<li>
 	<p><a href="https://www.cs.umd.edu/~pulkit/DNOW_workshop_2/">The 2nd Workshop on Dealing with Novelty in Open Worlds (DNOW) at WACV'23</a> </p>
 	</li>
