--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Congratulations to <a href="https://sites.google.com/site/samiashafique067/">Sam
 <p>
 Congratulations to <a href="https://www.linkedin.com/in/shubham-gupta94/">Shubham</a> and <a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">Jeet</a> on the <a href="https://wacv2023.thecvf.com/home"  target="_blank">WACV'23 
 <img src="./aimerykong_files/WACV2023_logo.jpg", height="20"></a> 
-	paper "<a href="https://aimerykong.github.io/"  target="_blank">Far3Det: Towards Far-Field 3D Detection</a>"! (10/10/2022)
+	paper "<a href="https://arxiv.org/abs/2211.13858"  target="_blank">Far3Det: Towards Far-Field 3D Detection</a>"! (10/10/2022)
 </a>
 </li>
 
@@ -126,7 +126,7 @@ Congratulations to <a href="https://www.linkedin.com/in/shubham-gupta94/">Shubha
 <p>
 Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a href="https://nips.cc/Conferences/2022"  target="_blank">NeurIPS'22 
 <img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="40"></a> 
-	paper "<a href="https://arxiv.org/abs/2210.04993"  target="_blank">Learning With an Evolving Class Ontology</a>"! (9/14/2022)
+	paper "<a href="https://arxiv.org/abs/2210.04993"  target="_blank">Continual Learning With an Evolving Class Ontology</a>"! Read more <a href="https://linzhiqiu.github.io/papers/leco/">in the webstie</a>. (9/14/2022)
 </a>
 </li>
 	
@@ -135,7 +135,7 @@ Congratulations to <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the <a h
 <p>
 Congratulations to <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://corl2022.org"  target="_blank">CoRL'22 <img src="./aimerykong_files/CoRL2022_logo.jpg", height="30"></a> 
 
-	paper "<a href="https://drive.google.com/file/d/1fWJTEn8iYCuKQaMFvOizNp088coV_1OJ/view?usp=sharing"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
+	paper "<a href="https://arxiv.org/abs/2211.08691"  target="_blank">Towards Long Tailed 3D Detection</a>"! (9/10/2022)
 </a>
 </li>	
 
