--- a/publication.html
+++ b/publication.html
@@ -74,7 +74,7 @@ In WACV 2023
 </a><br>
 </td>
 <td>
-<a href="https://aimerykong.github.io/"><b>Far3Det: Towards Far-Field 3D Detection</b></a>
+<a href="https://arxiv.org/abs/2211.13858"><b>Far3Det: Towards Far-Field 3D Detection</b></a>
 <br>
 <a href="https://www.linkedin.com/in/shubham-gupta94/">S. Gupta</a>,
 <a href="https://www.linkedin.com/in/jeet-kanjani-a86062107/">J. Kanjani</a>,
@@ -86,8 +86,8 @@ S. Kong<sup>#</sup>
 <br>
 In WACV 2023
 <br>
-[<a href="https://aimerykong.github.io/">github</a>]
-[<a href="https://aimerykong.github.io/">paper</a>]
+[<a href="https://arxiv.org/abs/2211.13858">github</a>]
+[<a href="https://arxiv.org/abs/2211.13858">paper</a>]
 <br>
 </td>
 
@@ -135,7 +135,7 @@ In NeurIPS 2022
         <a href="http://www.cs.cmu.edu/~deva/">D. Ramanan</a><sup>#</sup>, S. Kong<sup>#</sup> <br>
 In CoRL 2022
 <br>
-[<a href="https://github.com/neeharperi/LT3D">webpage</a>] [<a href="https://drive.google.com/file/d/1fWJTEn8iYCuKQaMFvOizNp088coV_1OJ/view?usp=sharing">preprint</a>]
+[<a href="https://github.com/neeharperi/LT3D">webpage</a>] [<a href="https://arxiv.org/abs/2211.08691">paper</a>]
 <br>
 </td>
 
