--- a/publication.html
+++ b/publication.html
@@ -102,7 +102,7 @@ In WACV 2023
 </td>
 <td>
 <a href="https://linzhiqiu.github.io/papers/leco/">
-<b>Learning With an Evolving Class Ontology</b></a>
+<b>Continual Learning With an Evolving Class Ontology</b></a>
 <br>
 <a href="https://linzhiqiu.github.io/">Z. Lin</a>, 
 	<a href="https://www.cs.cmu.edu/~dpathak/">D. Pathak</a>, 
