--- a/index.html
+++ b/index.html
@@ -102,6 +102,19 @@
 
 <ul style="font-size:13px;font-family:Times">
 
+	
+	
+
+
+<li>
+<p>
+Our <a href="https://vplow.github.io/vplow_3rd.html"  target="_blank">"3rd Workshop of Visual Perception and Learning in an Open World" <img src="http://vplow.github.io/open-world-vision_files/logo.png", height="23"></a>
+will be held in conjunction with <a href="https://cvpr2023.thecvf.com/"  target="_blank">CVPR'23 on June 18, 2023!
+<img src="./aimerykong_files/cvpr_banner_homepage.svg", height="23">
+</a>   (6/17/2023)
+</a>
+</li>	
+	
 
 <li>
 <p>
