--- a/group.html
+++ b/group.html
@@ -31,6 +31,9 @@
 	
 <h4>Graduate Students (advisees and mentees)</h4>
 	<ul>
+		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU)</li>
+		<li><a href="./">Tian Liu</a> (PhD at TAMU)</li>
+		<li><a href="./">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
