--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="my-container">
 		<h1> Shu Kong </h1>
-		<span> Assistant Professor, Texas A&M University <a href="https://github.com/aimerykong">[GitHub]</a>  <a href="http://scholar.google.com/citations?user=sm9FdLoAAAAJ&hl=en">[Google Scholar]</a> </span>
+		<span> Assistant Professor; University of Macau, Texas A&M University <a href="https://github.com/aimerykong">[GitHub]</a>  <a href="http://scholar.google.com/citations?user=sm9FdLoAAAAJ&hl=en">[Google Scholar]</a> </span>
 
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
 			<a href="index.html" class="btn btn-default" role="button">Home</a>
@@ -31,11 +31,11 @@
 					<img class="img-responsive img-rounded" src="./aimerykong_files/profile_shu.jpg">
 				</div>
 				<div class="col-sm-10">
-        <p style="font-size:16px;font-family:Times"> I am an incoming assistant professor at <a href="https://www.tamu.edu/"> Texas A&M University</a> in the <a href="https://engineering.tamu.edu/cse/index.html">CSE department</a>, 
-		  where I lead the <a href="group.html">Computer Vision Lab</a>. 
-		  I am a postdoctoral fellow at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, <a href="https://www.cmu.edu/">CMU</a>, 
+        <p style="font-size:16px;font-family:Times"> I am on the faculty of <a href="https://www.fst.um.edu.mo/">FST</a>,  <a href="https://www.um.edu.mo/">University of Macau</a>, and <a href="https://engineering.tamu.edu/cse/index.html">CSE</a>,  <a href="https://www.tamu.edu/">Texas A&M University</a>.
+		  I lead the <a href="group.html">Computer Vision Lab</a>. 
+		  I did my postdoc training at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, <a href="https://www.cmu.edu/">CMU</a>, 
 		  working with <a href="http://www.cs.cmu.edu/~deva/">Deva Ramanan</a>. 
-		  I received a Ph.D. from <a href="http://www.uci.edu/">UC-Irvine</a>, where I worked with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>.
+		  I received my PhD from <a href="http://www.uci.edu/">UC-Irvine</a>, where I worked with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>.
 	</p>
 	
 	<p style="font-size:16px;font-family:Times">
@@ -49,9 +49,10 @@
 	
 	<p style="font-size:16px;font-family:Times">
 		<font color="#8B0000">
-			I am looking for self-motivated PhD students starting Spring/Fall 2023 from <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE department, TAMU</a>.
+			I am looking for self-motivated PhD students starting Spring/Fall 2024 at <a href="https://www.fst.um.edu.mo/">CIS, FST, University of Macau</a>.
 			PhD students will be fully funded with fellowships.
 			Please feel free to contact me if interested.
+			At the moment, I am NOT looking for PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE, TAMU</a>.
 		</font>
 	</p>
 
