--- a/group.html
+++ b/group.html
@@ -36,16 +36,17 @@
 		<li><a href="./">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
+		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
 		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
-		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena)</li>
 		<li><a href="https://scholar.google.com/citations?user=fHWXpq4AAAAJ&hl=en">Jacob Fang</a> (PhD at ASU, now at Amazon Alexa AI)</li>
+		<li><a href="https://aimerykong.github.io/group.html">Shubham Parashar</a> (Master at TAMU)</li>
+		<li><a href="./">Runzhi Wang</a> (Master at TAMU, co-adivsed by Jiang Hu)</li>
 		<li><a href="http://publish.illinois.edu/punyasena/lab-members/">Jennifer Feng</a> (Master at UIUC, co-advised by Surangi Punyasena)</li>
 		<li><a href="https://aimerykong.github.io/group.html">Satish Reddy</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="https://aimerykong.github.io/group.html">Shubham Gupta</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
-		<li><a href="https://aimerykong.github.io/group.html">Shubham Parashar</a> (Master at TAMU)</li>
 		<li><a href="https://scholar.google.com/citations?user=asHobe0AAAAJ&hl=en">Jia Shi</a> (MSCV at CMU)</li>
 		<li><a href="https://g-meghana-reddy.github.io/">Meghana Reddy Ganesina</a> (MSCV at CMU)</li>
 		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU)</li>
@@ -78,6 +79,8 @@
 		<li><a href="https://people.engr.tamu.edu/huangrh/index.html">Ruihong Huang</a>, Associate Professor, TAMU-CSE
 		</li>
 		<li><a href="https://engineering.tamu.edu/cse/profiles/dsong.html">Dezhen Song</a>, Professor, TAMU-CSE
+		</li>
+		<li><a href="https://cesg.tamu.edu/people-2/faculty/jiang-hu/">Jiang Hu</a>, Professor, TAMU-CSE
 		</li>
 		<li><a href="http://people.tamu.edu/~tianbao-yang/">Tianbao Yang</a>, Associate Professor, TAMU-CSE
 		</li>
