--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
 <h3 style="font-size:20px;font-family:Times">contact</h3>
 <ul style="font-size:15px;font-family:Times;line-height:15px">
-<li>gmail: aimerykong [at] gmail [dot] com</li>
-<li>email: shu [at] tamu [dot] edu</li>
+<li>email: shu [at] tamu [dot] edu   [issues related to TAMU]</li>
+<li>email: skong [at] um [dot] edu [dot] mo   [issues related to the University of Macau]</li>
+<li>gmail: aimerykong [at] gmail [dot] com    [issues related to others; unlikely to reply]</li>
 </ul>
 </div>
 </div>
