--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 	
 	<p style="font-size:16px;font-family:Times">
 		<font color="#8B0000">
-			I am looking for self-motivated PhD students starting Spring/Fall 2024 at <a href="https://www.fst.um.edu.mo/">CIS, FST, University of Macau</a>.
+			I am looking for self-motivated PhD students starting in Spring/Fall 2024 at <a href="https://www.fst.um.edu.mo/">CIS, FST, University of Macau</a>.
 			PhD students will be fully funded with fellowships.
 			Please feel free to contact me if interested.
-			At the moment, I am NOT looking for PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE, TAMU</a>.
+			I am NOT looking for PhD students starting in Spring/Fall 2024 at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE, TAMU</a>.
 		</font>
 	</p>
 
