--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">
 	<li>
-	<p>CSCE689: Visual Learning for Visual Recognition (Spring 2023). </p>
+		<p>[CISC3027] Special Topics in Computer and Information Science: Visual Perception and Learning in the Open World (Fall 2023, UMacau)</p>
+	</li>
+	<li>
+	<p>[CSCE689] Visual Learning for Visual Recognition (Spring 2023, TAMU) </p>
 	</li>
 </ul>
 
