--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,60 @@
 
 
 
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="aimerykong_files/insdet.png">
+<img src="aimerykong_files/insdet.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="aimerykong_files/insdet.png"><b>A High-Resolution Dataset for Instance Detection with Multi-View Instance Capture</b></a>
+<br>
+<a href="aimerykong_files/insdet.png">author1</a>,
+<a href="aimerykong_files/insdet.png">author2</a>,
+<a href="aimerykong_files/insdet.png">author3</a>,
+<a href="aimerykong_files/insdet.png">author4</a>,
+<a href="aimerykong_files/insdet.png">author5</a>,
+S. Kong
+<br>
+In  Datasets and Benchmarks, NeurIPS, 2023
+<br>
+[<a href="aimerykong_files/insdet.png">github</a>]
+[<a href="aimerykong_files/insdet.png">paper</a>]
+<br>
+</td>
+
+
+<tr>
+<td width="35%" height=150>
+<a href="aimerykong_files/insdet.png">
+<img src="aimerykong_files/insdet.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="aimerykong_files/ov-parts.png"><b>OV-PARTS: Towards Open-Vocabulary Part Segmentation</b></a>
+<br>
+<a href="aimerykong_files/ov-parts.png">author1</a>,
+<a href="aimerykong_files/ov-parts.png">author2</a>,
+<a href="aimerykong_files/ov-parts.png">author3</a>,
+<a href="aimerykong_files/ov-parts.png">author4</a>,
+<a href="aimerykong_files/ov-parts.png">author5</a>,
+<br>
+In  Datasets and Benchmarks, NeurIPS, 2023
+<br>
+[<a href="aimerykong_files/ov-parts.png">github</a>]
+[<a href="aimerykong_files/ov-parts.png">paper</a>]
+<br>
+</td>
+
+
+	
+
+
+	
 <tr>
 <td width="35%" height=150>
 <a href="https://github.com/Samia067/ShoeRinsics">
