--- a/publication.html
+++ b/publication.html
@@ -72,8 +72,8 @@ In  Datasets and Benchmarks, NeurIPS, 2023
 
 <tr>
 <td width="35%" height=150>
-<a href="aimerykong_files/insdet.png">
-<img src="aimerykong_files/insdet.png" height="120"  border="0">
+<a href="aimerykong_files/ov-parts.png">
+<img src="aimerykong_files/ov-parts.png" height="120"  border="0">
 </a><br>
 </td>
 <td>
