--- a/publication.html
+++ b/publication.html
@@ -43,17 +43,38 @@
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/prompt-s-name">
+<img src="aimerykong_files/prompt-s-name.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://github.com/prompt-s-name"><b>Prompting Scientific Names for Zero-Shot Species Recognition</b></a>
+<br>
+<a href="aimerykong_files/prompt-s-name.png">S. Parashar</a>,
+<a href="aimerykong_files/prompt-s-name.png">Z. Lin</a>,
+<a href="aimerykong_files/prompt-s-name.png">Y. Li</a>,
+S. Kong
+<br>
+In ENMLP, 2023
+<br>
+[<a href="https://github.com/prompt-s-name">github</a>]
+[<a href="https://github.com/prompt-s-name">paper</a>]
+<br>
+</td>
+
 
 
 
 <tr>
 <td width="35%" height=150>
-<a href="aimerykong_files/insdet.png">
+<a href="https://github.com/insdet">
 <img src="aimerykong_files/insdet.png" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="aimerykong_files/insdet.png"><b>A High-Resolution Dataset for Instance Detection with Multi-View Instance Capture</b></a>
+<a href="https://neurips.cc/virtual/2023/poster/73409"><b>A High-Resolution Dataset for Instance Detection with Multi-View Instance Capture</b></a>
 <br>
 <a href="aimerykong_files/insdet.png">author1</a>,
 <a href="aimerykong_files/insdet.png">author2</a>,
@@ -64,31 +85,32 @@ S. Kong
 <br>
 In  Datasets and Benchmarks, NeurIPS, 2023
 <br>
-[<a href="aimerykong_files/insdet.png">github</a>]
-[<a href="aimerykong_files/insdet.png">paper</a>]
+[<a href="https://github.com/insdet">github</a>]
+[<a href="https://neurips.cc/virtual/2023/poster/73409">paper</a>]
 <br>
 </td>
 
 
 <tr>
 <td width="35%" height=150>
-<a href="aimerykong_files/ov-parts.png">
+<a href="https://github.com/OpenRobotLab/OV_PARTS">
 <img src="aimerykong_files/ov-parts.png" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="aimerykong_files/ov-parts.png"><b>OV-PARTS: Towards Open-Vocabulary Part Segmentation</b></a>
+<a href="https://neurips.cc/virtual/2023/poster/73650"><b>OV-PARTS: Towards Open-Vocabulary Part Segmentation</b></a>
 <br>
-<a href="aimerykong_files/ov-parts.png">author1</a>,
-<a href="aimerykong_files/ov-parts.png">author2</a>,
-<a href="aimerykong_files/ov-parts.png">author3</a>,
-<a href="aimerykong_files/ov-parts.png">author4</a>,
-<a href="aimerykong_files/ov-parts.png">author5</a>,
+<a href="aimerykong_files/ov-parts.png">Meng Wei</a>,
+<a href="aimerykong_files/ov-parts.png">Xiaoyu Yue</a>,
+<a href="aimerykong_files/ov-parts.png">Wenwei Zhang </a>,
+Shu Kong, 
+<a href="https://xh-liu.github.io/">Xihui Liu</a>,
+<a href="https://oceanpang.github.io/">Jiangmiao Pang</a>,
 <br>
-In  Datasets and Benchmarks, NeurIPS, 2023
+In Datasets and Benchmarks, NeurIPS, 2023
 <br>
-[<a href="aimerykong_files/ov-parts.png">github</a>]
-[<a href="aimerykong_files/ov-parts.png">paper</a>]
+[<a href="https://github.com/OpenRobotLab/OV_PARTS">github</a>]
+[<a href="https://neurips.cc/virtual/2023/poster/73650">paper</a>]
 <br>
 </td>
 
