--- a/publication.html
+++ b/publication.html
@@ -57,7 +57,7 @@
 <a href="aimerykong_files/prompt-s-name.png">Y. Li</a>,
 S. Kong
 <br>
-In ENMLP, 2023
+In EMNLP, 2023
 <br>
 [<a href="https://github.com/prompt-s-name">github</a>]
 [<a href="https://github.com/prompt-s-name">paper</a>]
