--- a/publication.html
+++ b/publication.html
@@ -45,22 +45,21 @@
 
 <tr>
 <td width="35%" height=150>
-<a href="https://github.com/prompt-s-name">
+<a href="http://arxiv.org/abs/2310.09929">
 <img src="aimerykong_files/prompt-s-name.png" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://github.com/prompt-s-name"><b>Prompting Scientific Names for Zero-Shot Species Recognition</b></a>
+<a href="http://arxiv.org/abs/2310.09929"><b>Prompting Scientific Names for Zero-Shot Species Recognition</b></a>
 <br>
-<a href="aimerykong_files/prompt-s-name.png">S. Parashar</a>,
-<a href="aimerykong_files/prompt-s-name.png">Z. Lin</a>,
-<a href="aimerykong_files/prompt-s-name.png">Y. Li</a>,
+<a href="https://www.linkedin.com/in/shubhamprshr/">S. Parashar</a>,
+<a href="http://arxiv.org/abs/2310.09929">Z. Lin</a>,
+<a href="http://arxiv.org/abs/2310.09929">Y. Li</a>,
 S. Kong
 <br>
 In EMNLP, 2023
 <br>
-[<a href="https://github.com/prompt-s-name">github</a>]
-[<a href="https://github.com/prompt-s-name">paper</a>]
+[<a href="http://arxiv.org/abs/2310.09929">paper</a>]
 <br>
 </td>
 
