--- a/index.html
+++ b/index.html
@@ -108,6 +108,45 @@
 
 <ul style="font-size:13px;font-family:Times">
 
+
+<li>
+<p>
+Congratulations to <a href="https://www.linkedin.com/in/shubhamprshr">Shubham</a> on the <a href="https://2023.emnlp.org/"  target="_blank">EMNLP'23 
+<img src="./aimerykong_files/emnlp2023-logo.png", height="20"></a> 
+	paper "<a href="http://arxiv.org/abs/2310.09929"  target="_blank">Prompting Scientific Names for Zero-Shot Species Recognition</a>"! (10/17/2023)
+</a>
+</li>
+
+
+<li>
+<p>
+Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a>, Qianqian and <a href="https://nahyunkwon.github.io/">Nahyun</a> on the <a href="https://nips.cc/Conferences/2023"  target="_blank">NeurIPS'23 
+<img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="20"></a> 
+	paper "<a href="https://github.com/insdet"  target="_blank">A High-Resolution Dataset for Instance Detection with Multi-View Instance Capture</a>"! (10/17/2023)
+</a>
+</li>
+
+
+	
+<li>
+<p>
+Congratulations to <a href="https://scholar.google.com.hk/citations?user=Wx8ChLcAAAAJ&hl=zh-CN">Meng</a> on the <a href="https://nips.cc/Conferences/2023"  target="_blank">NeurIPS'23 
+<img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="20"></a> 
+	paper "<a href="https://github.com/OpenRobotLab/OV_PARTS"  target="_blank">OV-PARTS: Towards Open-Vocabulary Part Segmentation</a>"! (10/17/2023)
+</a>
+</li>
+
+
+
+	
+<li>
+<p>
+Congratulations to <a href="https://www.linkedin.com/in/shubhamprshr">Shubham</a> on the <a href="https://2023.emnlp.org/"  target="_blank">EMNLP'23 
+<img src="./aimerykong_files/emnlp2023-logo.png", height="20"></a> 
+	paper "<a href="http://arxiv.org/abs/2310.09929"  target="_blank">Prompting Scientific Names for Zero-Shot Species Recognition</a>"! (10/17/2023)
+</a>
+</li>
+
 	
 	
 
