--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:13px;font-family:Times;line-height:15px">
 	<li>
+		<p>[CISC7014] Advanced Topics in Computer Science: Visual Perception and Learning in the Open World (Spring 2024, UMacau)</p>
+	</li>
+	<li>
 		<p>[CISC3027] Special Topics in Computer and Information Science: Visual Perception and Learning in the Open World (Fall 2023, UMacau)</p>
 	</li>
 	<li>
@@ -139,14 +142,6 @@ Congratulations to <a href="https://scholar.google.com.hk/citations?user=Wx8ChLc
 
 
 	
-<li>
-<p>
-Congratulations to <a href="https://www.linkedin.com/in/shubhamprshr">Shubham</a> on the <a href="https://2023.emnlp.org/"  target="_blank">EMNLP'23 
-<img src="./aimerykong_files/emnlp2023-logo.png", height="20"></a> 
-	paper "<a href="http://arxiv.org/abs/2310.09929"  target="_blank">Prompting Scientific Names for Zero-Shot Species Recognition</a>"! (10/17/2023)
-</a>
-</li>
-
 	
 	
 
