--- a/publication.html
+++ b/publication.html
@@ -114,6 +114,28 @@ In Datasets and Benchmarks, NeurIPS, 2023
 </td>
 
 
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2">
+<img src="aimerykong_files/phylogentic-placement.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2"><b>Deep Learning Approaches to the Phylogenetic Placement of Extinct Pollen Morphotypes
+</b></a>
+<br>
+<a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">MÉ Adaime</a>,  
+S. Kong, 
+<a href="http://publish.illinois.edu/punyasena/">S. Punyasena</a>,
+<br>
+bioRxiv 2023.07.09.545296, 2023<br>
+[<a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2">paper</a>]
+<br>
+</td>
+	
+
 	
 
 
