--- a/publication.html
+++ b/publication.html
@@ -116,6 +116,30 @@ In Datasets and Benchmarks, NeurIPS, 2023
 
 
 
+
+<tr>
+<td width="35%" height=150>
+<a href="./">
+<img src="aimerykong_files/LCA-on-the-line.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="./"><b>LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</b></a>
+<br>
+Jia Shi, Gautam Gare, Jinjin Tian, Siqi Chai, Zhiqiu Lin, Arun Vasudevan, Di Feng, Francesco Ferroni, Shu Kong, Deva Ramanan 
+<br>
+In NeurIPS Workshop on DistShift, 2023
+<br>
+[<a href="./">github</a>]
+[<a href="./">paper</a>]
+<br>
+</td>
+
+
+
+
+	
+
 <tr>
 <td width="35%" height=150>
 <a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2">
