--- a/publication.html
+++ b/publication.html
@@ -117,23 +117,6 @@ In Datasets and Benchmarks, NeurIPS, 2023
 
 
 
-<tr>
-<td width="35%" height=150>
-<a href="./">
-<img src="aimerykong_files/LCA-on-the-line.png" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="./"><b>LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</b></a>
-<br>
-Jia Shi, Gautam Gare, Jinjin Tian, Siqi Chai, Zhiqiu Lin, Arun Vasudevan, Di Feng, Francesco Ferroni, Shu Kong, Deva Ramanan 
-<br>
-In NeurIPS Workshop on DistShift, 2023
-<br>
-[<a href="./">github</a>]
-[<a href="./">paper</a>]
-<br>
-</td>
 
 
 
@@ -1072,9 +1055,23 @@ Pattern Recognition Letters, 2012
 <h3>Abstract/Workshop Papers</h3>
 <ul>
 
+	
 <li>
 <div class="publication">
-<p>Zhiyuan Fang, Shu Kong, Charless Fowlkes ,Yezhou Yang,
+<p>Jia Shi, Gautam Gare, Jinjin Tian, Siqi Chai, Zhiqiu Lin, Arun Vasudevan, Di Feng, Francesco Ferroni, Shu Kong, Deva Ramanan 
+"<font color=#AF7817>LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</font>",
+<em><a href="https://sites.google.com/view/distshift2023">NeurIPS Workshop on DistShift</a></em>, 2023
+</p>
+</div>
+</li>
+
+
+	
+
+	
+<li>
+<div class="publication">
+<p>Zhiyuan Fang, Shu Kong, Charless Fowlkes, Yezhou Yang
 "<font color=#AF7817> Modularized Textual Grounding for Counterfactual Resilience</font>",
 <em><a href="http://languageandvision.com">Language And Vision workshop joint with CVPR</a></em>, 2019.
 </p>
@@ -1087,7 +1084,7 @@ Pattern Recognition Letters, 2012
 
 <li>
 <div class="publication">
-<p>Surangi W. Punyasena,  <b>Shu Kong</b>, Charless C. Fowlkes, 
+<p>Surangi W. Punyasena,  <b>Shu Kong</b>, Charless C. Fowlkes
 "<font color=#AF7817>Improving the taxonomic accuracy and precision of fossil pollen identifications</font>",  
 <em><a href="https://napc2019.ucr.edu/">North American Paleontological Convention, Riverside, USA</a></em>, 2019.
 </p>
