--- a/publication.html
+++ b/publication.html
@@ -73,13 +73,13 @@ In EMNLP, 2023
 </a><br>
 </td>
 <td>
-<a href="https://neurips.cc/virtual/2023/poster/73409"><b>A High-Resolution Dataset for Instance Detection with Multi-View Instance Capture</b></a>
+<a href="https://arxiv.org/abs/2310.19257"><b>A High-Resolution Dataset for Instance Detection with Multi-View Instance Capture</b></a>
 <br>
-<a href="aimerykong_files/insdet.png">author1</a>,
-<a href="aimerykong_files/insdet.png">author2</a>,
-<a href="aimerykong_files/insdet.png">author3</a>,
-<a href="aimerykong_files/insdet.png">author4</a>,
-<a href="aimerykong_files/insdet.png">author5</a>,
+<a href="aimerykong_files/insdet.png">Q. Shen</a>,
+<a href="https://ics.uci.edu/~yunhaz5/">Y. Zhao</a>,
+<a href="https://nahyunkwon.github.io/">N. Kwon</a>,
+<a href="https://hcied.info/jeeeunkim.html">J. Kim</a>,
+<a href="aimerykong_files/insdet.png">Y. Li</a>,
 S. Kong
 <br>
 In  Datasets and Benchmarks, NeurIPS, 2023
