--- a/group.html
+++ b/group.html
@@ -76,11 +76,13 @@
 	<ul>
 		<li><a href="http://www.jeeeunkim.com/">Jeeeun Kim</a>, Assistant Professor, TAMU-CSE
 		</li>
+		<li><a href="https://people.engr.tamu.edu/caverlee/index.html">James Caverlee</a>, Professor, TAMU-CSE
+		</li>
 		<li><a href="https://people.engr.tamu.edu/huangrh/index.html">Ruihong Huang</a>, Associate Professor, TAMU-CSE
 		</li>
 		<li><a href="https://engineering.tamu.edu/cse/profiles/dsong.html">Dezhen Song</a>, Professor, TAMU-CSE
 		</li>
-		<li><a href="https://cesg.tamu.edu/people-2/faculty/jiang-hu/">Jiang Hu</a>, Professor, TAMU-CSE
+		<li><a href="https://cesg.tamu.edu/people-2/faculty/jiang-hu/">Jiang Hu</a>, Professor, TAMU-ECE
 		</li>
 		<li><a href="http://people.tamu.edu/~tianbao-yang/">Tianbao Yang</a>, Associate Professor, TAMU-CSE
 		</li>
