--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
 <ul style="font-size:13px;font-family:Times">
 
 
+
+<li>
+<p>
+Congratulations to <a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie</a> on the <a href="https://academic.oup.com/pnasnexus"  target="_blank">PNAS Nexus 
+<img src="./aimerykong_files/pnas-nexus-logo.png", height="20"></a> 
+	paper "<a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2"  target="_blank">Deep Learning Approaches to the Phylogenetic Placement of Extinct Pollen Morphotypes</a>"! (11/21/2023)
+</a>
+</li>
+
+	
+
 <li>
 <p>
 Congratulations to <a href="https://www.linkedin.com/in/shubhamprshr">Shubham</a> on the <a href="https://2023.emnlp.org/"  target="_blank">EMNLP'23 
