--- a/publication.html
+++ b/publication.html
@@ -46,6 +46,54 @@
 
 
 
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2312.04117v1">
+<img src="aimerykong_files/IT3DEgo.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.04117v1"><b>instance tracking in 3D scenes from egocentric videos
+</b></a>
+<br>
+Yunhan Zhao, Haoyu Ma, Shu Kong, Charless Fowlkes
+<br>
+arXiv:2312.04117, 2023<br>
+[<a href="https://arxiv.org/abs/2312.04117v1">paper</a>]
+<br>
+</td>
+		
+
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2312.03818">
+<img src="aimerykong_files/alpha-CLIP.png" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.03818"><b>Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</b></a>
+<br>
+Zeyi Sun, Ye Fang, Tong Wu, Pan Zhang, Yuhang Zang, Shu Kong, Yuanjun Xiong, Dahua Lin, Jiaqi Wang
+<br>
+arxiv:2312.03818, 2023<br>
+[<a href="https://arxiv.org/abs/2312.03818">paper</a>] 
+[<a href="https://huggingface.co/papers/2312.03818">code</a>]
+[<a href="https://aleafy.github.io/alpha-clip/">webpage</a>]
+<br>
+</td>
+
+
+
+
+	
+	
+
 <tr>
 <td width="35%" height=150>
 <a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2">
