--- a/contact.html
+++ b/contact.html
@@ -37,16 +37,27 @@
 							<p>
 								shu at tamu.edu
 							</p>
+							
+							<p>
+								skong at um.edu.mo
+							</p>
 							<p>
 								aimerykong at gmail.com
 							</p>
 						</div>
 						<div class="list-group-item">
 							<h3 class="pull-left"><i class="fa fa-coffee"></i></h3>
-							<h4>Address</h4>
+							<h4>Address - TAMU</h4>
 							<p class="list-group-item-text">Department of Computer Science & Engineering<br>
 								3112 Texas A&M University<br>
 								College Station, TX 77843-3112</p>
+						</div>
+						<div class="list-group-item">
+							<h3 class="pull-left"><i class="fa fa-coffee"></i></h3>
+							<h4>Address - UMacau</h4>
+							<p class="list-group-item-text">E11 4025<br>
+								University Avenue, University of Macau<br>
+								Taipa, Macau</p>
 						</div>
 							
 
