--- a/publication.html
+++ b/publication.html
@@ -16,7 +16,7 @@
 
 	<div class="my-container">
 		<h1> Shu Kong </h1>
-		<span> Assistant Professor, Texas A&M University <a href="https://github.com/aimerykong">[GitHub]</a>  <a href="http://scholar.google.com/citations?user=sm9FdLoAAAAJ&hl=en">[Google Scholar]</a> </span>
+		<span> Assistant Professor; University of Macau, Texas A&M University <a href="https://github.com/aimerykong">[GitHub]</a>  <a href="http://scholar.google.com/citations?user=sm9FdLoAAAAJ&hl=en">[Google Scholar]</a> </span>
 
 		<div class="btn-group btn-group-justified" role="group" aria-label="Justified button group">
 			<a href="index.html" class="btn btn-default" role="button">Home</a>
