--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,44 @@
 
 
 
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2312.10986">
+<img src="aimerykong_files/LT3D-lateFusion.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.10986"><b>Long-Tailed 3D Detection via 2D Late Fusion
+</b></a>
+<br>
+Yechi Ma, Neehar Peri, Shuoquan Wei, Wei Hua, Deva Ramanan, Yanan Li, Shu Kong
+<br>
+arXiv:2312.10986, 2023<br>
+[<a href="https://arxiv.org/abs/2312.10986">paper</a>]
+<br>
+</td>
+		
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2312.14494">
+<img src="aimerykong_files/revisitFSOD.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.14494"><b>Revisiting Few-Shot Object Detection with Vision-Language Models
+</b></a>
+<br>
+Anish Madan, Neehar Peri, Shu Kong, Deva Ramanan
+<br>
+arXiv:2312.14494, 2023<br>
+[<a href="https://arxiv.org/abs/2312.14494">paper</a>]
+<br>
+</td>
+		
+
 
 
 
@@ -96,12 +134,12 @@ arxiv:2312.03818, 2023<br>
 
 <tr>
 <td width="35%" height=150>
-<a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2">
+<a href="https://academic.oup.com/pnasnexus/advance-article/doi/10.1093/pnasnexus/pgad419/7471798>
 <img src="aimerykong_files/phylogentic-placement.png" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2"><b>Deep Learning Approaches to the Phylogenetic Placement of Extinct Pollen Morphotypes
+<a href="https://academic.oup.com/pnasnexus/advance-article/doi/10.1093/pnasnexus/pgad419/7471798"><b>Deep Learning Approaches to the Phylogenetic Placement of Extinct Pollen Morphotypes
 </b></a>
 <br>
 <a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">MÉ Adaime</a>,  
@@ -109,7 +147,7 @@ S. Kong,
 <a href="http://publish.illinois.edu/punyasena/">S. Punyasena</a>,
 <br>
 Proceedings of the National Academy of Sciences (PNAS) Nexus, 2023<br>
-[<a href="https://www.biorxiv.org/content/10.1101/2023.07.09.545296v2">paper</a>]
+[<a href="https://academic.oup.com/pnasnexus/advance-article/doi/10.1093/pnasnexus/pgad419/7471798">paper</a>]
 <br>
 </td>
 	
@@ -1119,7 +1157,7 @@ Pattern Recognition Letters, 2012
 <div class="publication">
 <p>Jia Shi, Gautam Gare, Jinjin Tian, Siqi Chai, Zhiqiu Lin, Arun Vasudevan, Di Feng, Francesco Ferroni, Shu Kong, Deva Ramanan 
 "<font color=#AF7817>LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</font>",
-<em><a href="https://sites.google.com/view/distshift2023">NeurIPS Workshop on DistShift</a></em>, 2023
+<em><a href="https://openreview.net/forum?id=7CUutNeDDg">NeurIPS Workshop on DistShift</a></em>, 2023
 </p>
 </div>
 </li>
